[package]
name = "flasky"
version = "0.1.0"
authors = ["Pratush Rai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
