[package]
name = "flasky"
version = "0.1.5"
authors = ["Pratush Rai"]
edition = "2021"
description = "Create boilerplate code for a new flask app"
license = "MIT"
repository = "https://github.com/pratushrai0309/flasky"
keywords = ["clap", "cli"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
